# github-analyzer

./: Cargo.toml  readme.MD  temp.json
src/: data_analyzers.rs  github_data_fetchers.rs  lib.rs  reports.rs  utils.rs
