[package]
name = "github-analyzer"
version = "0.1.2"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
openai-flows = "0.8.5"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
serde_json = "1"
http_req_wasi ="0.11"
urlencoding = "2.1.3"
flowsnet-platform-sdk = "0.1.5"
log = "0.4.19"
store-flows = "0.3.1"
base64 = "0.21.2"
twox-hash = "1.6.3"
derivative = "2.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
webhook-flows = "0.1"
slack-flows = "0.3.4"
tiktoken-rs = "0.2.2"
